# daikin-ac-control

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
daikin_ac_control/: __init__.py  __main__.py  client.py  config.py  http.py  oauth.py
skills/daikin-ac-control/: SKILL.md
tests/: __init__.py  test_daikin_ac_control.py
